--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/Create a MS Word Report/bin/Debug
+/Create a MS Word Report/obj
