Worked on some items for making header a choice

--- a/Create a MS Word Report/Create a MS Word Report.csproj
+++ b/Create a MS Word Report/Create a MS Word Report.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Header.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Housekeeping.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
