Started to add bookmarks but so far it is nto working. The code compiles as I have commented out parts that fall over.

--- a/Create a MS Word Report/Create a MS Word Report.csproj
+++ b/Create a MS Word Report/Create a MS Word Report.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookMarkUtils.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="footer.cs">
       <SubType>Form</SubType>
     </Compile>
